--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "email-check": "^1.1.0",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
   }
