--- a/config/ENV.env
+++ b/config/ENV.env
@@ -1,2 +1,3 @@
 PORT = 3001
 MONGO_URI="mongodb+srv://ClickFilm:e3IRJQWx4uZMCSU6@cluster0.5whcz.mongodb.net/ClickFilm?retryWrites=true&w=majority"
+JWT_SECRET="casfvasvojnpovan@!@#$%%^(cjnsfvpowrfnvfvf"
