--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "email-check": "^1.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
   }
