--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "cross-env NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app"
   },
+  "engines": {
+    "node": ">=14 <15"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rezac78/clickfilm-Back-end.git"
